deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloodapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bloodapp
  template:
    metadata:
      labels:
        app: bloodapp
    spec:
      containers:
      - name: bloodapp-container
        image: manisha03b/bloodbankapp:appimage
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
