db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  clusterIP: None
  selector:
    app: db-bloodapp
  ports:
    - port: 3306
      targetPort: 3306
